tools/tests/errors/surf_lib_01.ki
# Importing a module that does not exist must raise.
discard import("nonexistent_module_xyz")
